--- a/Resume/styles/styles.css
+++ b/Resume/styles/styles.css
@@ -254,3 +254,197 @@ title{
     line-height: 24px;
     color: #FFFFFF;
 }
+
+/*Small devices (landscape phones, 576px and down)*/
+@media screen and (max-width: 576px) {
+    .main{
+        width: 100%;
+        font-size: 12px;
+    }
+
+    .sidebar{
+        width: 40%;
+    }
+
+    .sidebar-title{
+        font-size: 12px;
+    }
+
+    .contact-type, .contact-link{
+        font-size: 8px;
+        line-height: 12px;
+        margin: auto;
+    }
+
+    .tech-skills, .soft-skills, .contacts {
+        margin-bottom: 15px;
+        margin-left: 15px;
+    }
+    
+    .tech-skills-text,.soft-skills-text {
+        font-size: 8px;
+        line-height: 10px;
+    }
+
+    .main-content{
+        width: 70%;
+        padding: 5% 5%;
+    }
+
+    .about-name {
+        font-size: 15px;
+        margin-bottom: 5px;
+    }
+
+    .about-position{
+        font-size: 14px;
+        margin-bottom: 5px;
+    }
+
+    .about-discription{
+        width: 100%;
+        font-size: 10px;
+        line-height: 10px;
+    }
+
+    .photo{
+        width: 100%;
+        margin-bottom: 5px;
+    }
+
+    .work{
+        margin-bottom: 15px;
+    }
+
+    .work-position{
+        font-size: 10px;
+    }
+
+    .organization{
+        font-size: 10px;
+    }
+
+    .work-list-item{
+        font-size: 10px;
+        line-height: 14px;
+    }
+
+    .education-university{
+        font-size: 10px;
+        line-height: 20px;
+    }
+
+    .education-position{
+        font-size: 10px;
+        margin-bottom: 5px;
+    }
+
+    .period{
+        font-size: 8px;
+    }
+}
+
+
+/* Medium devices (tablets, 768px and down)*/
+@media (max-width: 768px) {
+    .main {
+        width: 100%;
+        font-size: 12px;
+    }
+
+    .sidebar {
+        width: 40%;
+    }
+
+    .sidebar-title {
+        font-size: 12px;
+    }
+
+    .contact-type,
+    .contact-link {
+        font-size: 10px;
+        line-height: 12px;
+        margin: auto;
+    }
+
+    .tech-skills,
+    .soft-skills,
+    .contacts {
+        margin-bottom: 15px;
+        margin-left: 15px;
+    }
+
+    .tech-skills-text,
+    .soft-skills-text {
+        font-size: 8px;
+        line-height: 10px;
+    }
+
+    .main-content {
+        width: 70%;
+        padding: 5% 5%;
+    }
+
+    .about-name {
+        font-size: 15px;
+        margin-bottom: 5px;
+    }
+
+    .about-position {
+        font-size: 14px;
+        margin-bottom: 5px;
+    }
+
+    .about-discription {
+        width: 100%;
+        font-size: 12px;
+        line-height: 12px;
+    }
+
+    .photo {
+        width: 100%;
+        margin-bottom: 5px;
+    }
+
+    .work {
+        margin-bottom: 15px;
+    }
+
+    .work-position {
+        font-size: 12px;
+    }
+
+    .organization {
+        font-size: 10px;
+    }
+
+    .work-list-item {
+        font-size: 12px;
+        line-height: 14px;
+    }
+
+    .education-university {
+        font-size: 10px;
+        line-height: 20px;
+    }
+
+    .education-position {
+        font-size: 10px;
+        margin-bottom: 5px;
+    }
+
+    .period {
+        font-size: 10px;
+    }
+}
+
+/* Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+    ...
+}
+
+// X-Large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+    ...
+}
+*/
