--- a/Resume/styles/styles.css
+++ b/Resume/styles/styles.css
@@ -24,7 +24,7 @@ body{
 .about{ 
     margin-bottom: 40px; 
 }
-.about-position{
+.about__position{
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
@@ -32,7 +32,7 @@ body{
     color: #000000;
     margin-bottom: 20px;
 }
-.about-name{
+.about__name{
     font-style: normal;
     font-weight: 700;
     font-size: 45px;
@@ -40,7 +40,7 @@ body{
     color: #000000;
     margin-bottom: 25px;
 }
-.about-discription{
+.about__discription{
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -102,7 +102,7 @@ title{
     margin-bottom: 45px;
 }
 
-.work-position{
+.work__position{
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
@@ -136,12 +136,12 @@ title{
     color: #000000;
 }
 
-.work-list{
+.work__list{
     padding: 0;
     margin-left: 15px;
 }
 
-.work-list-item{
+.work__list-item{
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -151,7 +151,7 @@ title{
 
 /* education styles */
 
-.education-university{
+.education__university{
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
@@ -160,7 +160,7 @@ title{
     margin-bottom: 10px;
 }
 
-.education-position{
+.education__position{
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
@@ -176,7 +176,7 @@ title{
     width: 370px;
 }
 
-.sidebar-title{
+.sidebar__title{
     color: #FFFFFF;
     font-style: normal;
     font-weight: 700;
@@ -185,7 +185,7 @@ title{
     margin-bottom: 10px;
 }
 
-.photo{
+.sidebar__photo{
     width: 370px;
     margin-bottom: 50px;
 }
@@ -203,7 +203,7 @@ title{
     margin-bottom: 45px;
 }
 
-.contact-type{
+.contact__type{
     color: #FFFFFF;
     font-style: normal;
     font-weight: 700;
@@ -211,27 +211,27 @@ title{
     line-height: 24px;
     margin-right: 10px;
 }
-.contact-link{
+.contact__link{
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
     color: #727983;
 }
-.tech-skills-list,
-.soft-skills-list{
+.tech-skills__list,
+.soft-skills__list{
     color: #FFFFFF;
     padding: 0;
     margin-left: 17px;
 }
 
-.tech-skills-item,
-.soft-skills-item{
+.tech-skills__list-item,
+.soft-skills__list-item{
     color: #FB6D3A;
 }
 
-.tech-skills-text,
-.soft-skills-text{
+.tech-skills__text,
+.soft-skills__text{
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -251,12 +251,12 @@ title{
         width: 40%;
     }
 
-    .sidebar-title{
+    .sidebar__title{
         font-size: 12px;
     }
 
-    .contact-type, 
-    .contact-link{
+    .contact__type, 
+    .contact__link{
         font-size: 8px;
         line-height: 12px;
         margin: auto;
@@ -269,8 +269,8 @@ title{
         margin-left: 15px;
     }
     
-    .tech-skills-text,
-    .soft-skills-text{
+    .tech-skills__text,
+    .soft-skills__text{
         font-size: 8px;
         line-height: 10px;
     }
@@ -280,23 +280,23 @@ title{
         padding: 5% 5%;
     }
 
-    .about-name{
+    .about__name{
         font-size: 15px;
         margin-bottom: 5px;
     }
 
-    .about-position{
+    .about__position{
         font-size: 14px;
         margin-bottom: 5px;
     }
 
-    .about-discription{
+    .about__discription{
         width: 100%;
         font-size: 10px;
         line-height: 10px;
     }
 
-    .photo{
+    .sidebar__photo{
         width: 100%;
         margin-bottom: 5px;
     }
@@ -305,7 +305,7 @@ title{
         margin-bottom: 15px;
     }
 
-    .work-position{
+    .work__position{
         font-size: 10px;
     }
 
@@ -313,17 +313,17 @@ title{
         font-size: 10px;
     }
 
-    .work-list-item{
+    .work__list-item{
         font-size: 10px;
         line-height: 14px;
     }
 
-    .education-university{
+    .education__university{
         font-size: 10px;
         line-height: 20px;
     }
 
-    .education-position{
+    .education__position{
         font-size: 10px;
         margin-bottom: 5px;
     }
@@ -345,12 +345,12 @@ title{
         width: 40%;
     }
 
-    .sidebar-title{
+    .sidebar__title{
         font-size: 12px;
     }
 
-    .contact-type,
-    .contact-link{
+    .contact__type,
+    .contact__link{
         font-size: 10px;
         line-height: 12px;
         margin: auto;
@@ -363,8 +363,8 @@ title{
         margin-left: 15px;
     }
 
-    .tech-skills-text,
-    .soft-skills-text{
+    .tech-skills__text,
+    .soft-skills__text{
         font-size: 8px;
         line-height: 10px;
     }
@@ -374,23 +374,23 @@ title{
         padding: 5% 5%;
     }
 
-    .about-name{
+    .about__name{
         font-size: 15px;
         margin-bottom: 5px;
     }
 
-    .about-position{
+    .about__position{
         font-size: 14px;
         margin-bottom: 5px;
     }
 
-    .about-discription{
+    .about__discription{
         width: 100%;
         font-size: 12px;
         line-height: 12px;
     }
 
-    .photo{
+    .sidebar__photo{
         width: 100%;
         margin-bottom: 5px;
     }
@@ -399,7 +399,7 @@ title{
         margin-bottom: 15px;
     }
 
-    .work-position{
+    .work__position{
         font-size: 12px;
     }
 
@@ -407,17 +407,17 @@ title{
         font-size: 10px;
     }
 
-    .work-list-item{
+    .work__list-item{
         font-size: 12px;
         line-height: 14px;
     }
 
-    .education-university{
+    .education__university{
         font-size: 10px;
         line-height: 20px;
     }
 
-    .education-position{
+    .education__position{
         font-size: 10px;
         margin-bottom: 5px;
     }
